<resources>
    <string name="app_name">Smart Attend</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="classes">Classes</string>
    <string name="courses">subjects</string>
    <string name="manage_classes">Manage Classes</string>
    <string name="manage_courses">manage courses</string>
    <string name="more">more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_course_code">BIT 212</string>
    <string name="sample_course_title">Communication Skills Fundamentals</string>
    <string name="sample_lec_name">Mr. Mike M Karis</string>
    <string name="course">course</string>
    <string name="save">save</string>
    <string name="code">code</string>
    <string name="classs">class</string>
    <string name="program">program</string>
    <string name="class_id">class ID</string>
    <string name="prompt_class_id">eg DICT21J</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="my_courses">my courses</string>
    <string name="login">login</string>
    <string name="prompt_username">registration / employee number</string>
    <string name="prompt_password">password</string>
    <string name="welcome">welcome</string>
    <string name="new_attendance">new attendance</string>
    <string name="in_progress">In progress</string>
    <string name="lesson_in_progress">Session in Progress</string>
    <string name="me">me</string>
    <string name="create_session">create session</string>
    <string name="select_end_time">select end time</string>
    <string name="okay">okay</string>
    <string name="log_out">log out</string>
    <string name="time_not_selected">time not set</string>
    <string name="courses_caps">Courses</string>
    <string name="lessons">Session</string>
    <string name="session_explanation">Start new or view a session in progress</string>
    <string name="lesson_explanation">View and manage courses</string>
    <string name="mmust">Masinde Muliro University Of Science and technology</string>
    <string name="project_title">Student Attendance App</string>
    <string name="lesson_expalnation_students">Mark attendance and share code with classmates</string>
    <string name="log_out_of_the_app">Log out of the app</string>
    <string name="view_and_manage_classes">View and manage Classes</string>
    <string name="attendees">Attendees</string>
    <string name="lecturers">Lecturers</string>
    <string name="view_and_manage_lecturers">View and manage Lecturers</string>
    <string name="sample_class_code">DICT-2018-S</string>
    <string name="students">Students</string>
    <string name="hint_name">name</string>
    <string name="registration_number">registration number</string>
    <string name="new_lecturer">New Lecturer</string>
    <string name="attendance_report">Attendance report</string>
    <string name="_56">56%</string>
    <string name="reg_no">reg no</string>
    <string name="_0">0</string>
    <string name="explanation_teaching_courses">My teaching courses</string>
    <string name="lecturer_panel">Lecturer panel</string>
    <string name="student_panel">Student panel</string>
</resources>