<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@id/navigation_student_home">

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="app.smartattend.admin.ui.notifications.NotificationsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_student_home"
        android:name="app.smartattend.student.ui.StudentHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_student_home" >
        <action
            android:id="@+id/action_navigation_student_home_to_lessonFragment"
            app:destination="@id/lessonFragment" />
        <action
            android:id="@+id/action_navigation_student_home_to_coursesFragment2"
            app:destination="@id/coursesFragment2" />
    </fragment>
    <fragment
        android:id="@+id/lessonFragment"
        android:name="app.smartattend.student.ui.LessonFragment"
        android:label="@string/lesson_in_progress"
        tools:layout="@layout/fragment_lesson" />
    <fragment
        android:id="@+id/coursesFragment2"
        android:name="app.smartattend.admin.ui.CoursesFragment"
        android:label="@string/courses"
        tools:layout="@layout/fragment_courses" >
        <argument
            android:name="classId"
            app:argType="string" />
    </fragment>
</navigation>