<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_lecturer"
    android:label="@string/app_name"
    app:startDestination="@id/navigation_lecturer_home">

    <fragment
        android:id="@+id/navigation_lecturer_home"
        android:name="app.smartattend.lecturer.ui.LecturerHomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_lecturer_home">
        <action
            android:id="@+id/action_navigation_lecturer_home_to_navigation_lesson_fragment"
            app:destination="@id/navigation_lesson_fragment" />
        <action
            android:id="@+id/action_navigation_lecturer_home_to_createLessonFragment"
            app:destination="@id/navigation_create_lesson_fragment" />
        <action
            android:id="@+id/action_navigation_lecturer_home_to_coursesFragment3"
            app:destination="@id/coursesFragment3" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="app.smartattend.admin.ui.notifications.NotificationsFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_lesson_fragment"
        android:name="app.smartattend.student.ui.LessonFragment"
        android:label="@string/in_progress"
        tools:layout="@layout/fragment_lesson" />
    <fragment
        android:id="@+id/navigation_create_lesson_fragment"
        android:name="app.smartattend.lecturer.ui.CreateLessonFragment"
        android:label="@string/create_session"
        tools:layout="@layout/fragment_create_lesson" />
    <fragment
        android:id="@+id/coursesFragment3"
        android:name="app.smartattend.admin.ui.CoursesFragment"
        android:label="@string/courses"
        tools:layout="@layout/fragment_courses" >
        <action
            android:id="@+id/action_coursesFragment3_to_courseReportFragment2"
            app:destination="@id/courseReportFragment2"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/courseReportFragment2"
        android:name="app.smartattend.admin.ui.notifications.CourseReportFragment"
        android:label="fragment_course_report"
        tools:layout="@layout/fragment_course_report" >
        <argument
            android:name="courseId"
            app:argType="string" />
    </fragment>

</navigation>