<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:layout_marginBottom="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_course_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/sample_course_code"/>
        <TextView
            android:id="@+id/tv_course_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sample_course_title"
            app:layout_constraintStart_toStartOf="@id/tv_course_code"
            app:layout_constraintTop_toBottomOf="@id/tv_course_code"
            app:layout_constraintEnd_toEndOf="@id/tv_course_code"/>
        <TextView
            android:id="@+id/tv_course_lecturer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_lec_name"
            app:layout_constraintEnd_toEndOf="@id/tv_course_title"
            app:layout_constraintTop_toBottomOf="@id/tv_course_title"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>