<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="app.smartattend.admin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_classesFragment"
            app:destination="@id/classesFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_navigation_home_to_lecturersFragment"
            app:destination="@id/lecturersFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="app.smartattend.admin.ui.notifications.NotificationsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/coursesFragment"
        android:name="app.smartattend.admin.ui.CoursesFragment"
        android:label="@string/manage_courses"
        tools:layout="@layout/fragment_courses">
        <action
            android:id="@+id/action_coursesFragment_to_editCourseFragment"
            app:destination="@id/editCourseFragment" />
    </fragment>
    <fragment
        android:id="@+id/editCourseFragment"
        android:name="app.smartattend.admin.ui.EditCourseFragment"
        android:label="@string/course"
        tools:layout="@layout/fragment_edit_course" />
    <fragment
        android:id="@+id/classesFragment"
        android:name="app.smartattend.admin.ui.ClassesFragment"
        android:label="@string/manage_classes"
        tools:layout="@layout/fragment_classes" >
        <action
            android:id="@+id/action_classesFragment_to_editClassFragment"
            app:destination="@id/editClassFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_classesFragment_to_classFragment"
            app:destination="@id/classFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/editClassFragment"
        android:name="app.smartattend.admin.ui.EditClassFragment"
        android:label="@string/classs"
        tools:layout="@layout/fragment_edit_class" />
    <fragment
        android:id="@+id/classFragment"
        android:name="app.smartattend.admin.ui.ClassFragment"
        android:label="@string/classs"
        tools:layout="@layout/fragment_class" >
        <action
            android:id="@+id/action_classFragment_to_editCourseFragment"
            app:destination="@id/editCourseFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_classFragment_to_editStudentFragment"
            app:destination="@id/editStudentFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_classFragment_to_courseReportFragment"
            app:destination="@id/courseReportFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <argument
            android:name="classId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editStudentFragment"
        android:name="app.smartattend.admin.ui.EditStudentFragment"
        android:label="Student"
        tools:layout="@layout/fragment_edit_student" />
    <fragment
        android:id="@+id/lecturersFragment"
        android:name="app.smartattend.admin.ui.home.LecturersFragment"
        android:label="manage lecturers"
        tools:layout="@layout/fragment_lecturers" >
        <action
            android:id="@+id/action_lecturersFragment_to_editLecturerFragment"
            app:destination="@id/editLecturerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/editLecturerFragment"
        android:name="app.smartattend.admin.ui.EditLecturerFragment"
        android:label="Lecturer"
        tools:layout="@layout/fragment_edit_lecturer" >
        <argument
            android:name="lecRegNo"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
    </fragment>
    <fragment
        android:id="@+id/courseReportFragment"
        android:name="app.smartattend.admin.ui.notifications.CourseReportFragment"
        android:label="course report"
        tools:layout="@layout/fragment_course_report" >
        <argument
            android:name="courseId"
            app:argType="string" />
    </fragment>
</navigation>